# Subete

./: .gitignore  .taurignore  2024-06-13_19-35-41.mkv  Cargo.toml  Dockerfile  Dockerfile2  Manga4Life.json  README.md  android.sh  build.sh  db.sqlite  diesel_notes.txt  docker-compose.yml  docker_notes.txt  library.json  notes.txt  package-lock.json  package.json  plugin_creator.js  plugin_template.json  plugins.json  svelte.config.js  tauri.conf.json  temp.html  test.js
capabilities/: default.json
frontend/: package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: common.js  ln_common.js  manga_common.js  store.js
frontend/src/routes/: +layout.svelte  +page.svelte  snackbar.svelte
icons/: icon.icns
migrations/2024-06-05-015008_create_chapters/: up.sql
migrations/2024-06-05-020745_create_manga/: down.sql  up.sql
migrations/2024-06-05-141857_create_library/: up.sql
migrations/2024-06-05-141903_create_chapters/: down.sql  up.sql
migrations/2024-06-05-141907_create_plugins/: down.sql  up.sql
plugins/: Asura_Light_Novel.json  Create_Asura_ln.js  Create_Manga4Life.js  Create_MangaDex.js  Manga4Life.json  MangaDex.json  create_Manga4Life.js  plugin_creator.js
src/: database.rs  lib.rs  library.rs  main.rs  plugins.rs  schema.rs  settings.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  helpers.rs  lib.rs  main.rs  settings.rs
src-tauri/src/anime/: library.rs  mod.rs  plugins.rs  update.rs
src-tauri/src/ln/: library.rs  mod.rs  plugins.rs  update.rs
src-tauri/src/manga/: history.rs  library.rs  mod.rs  plugins.rs  update.rs
src-tauri/src/routes/browse/: display.svelte
src-tauri/src/routes/history/: +page.svelte
src-tauri/src/routes/ln_library/: +page.svelte
src-tauri/src/routes/more/: +page.svelte
src-tauri/src/routes/settings/: theme.svelte
src/lib/: anime_common.js  common.js  global_common.js  history.js  manga_common.js  store.js
src/lib/css/: listItems.css
src/ln/: library.rs  mod.rs  plugins.rs
src/manga/: history.rs  library.rs  mod.rs  plugins.rs  update.rs
src/routes/: +layout.svelte  +page.svelte  snackbar.svelte
src/routes/anime_library/: +page.svelte
src/routes/browse/: +page.svelte  display.svelte
src/routes/history/: +page.svelte
src/routes/manga_library/: +page.svelte
src/routes/more/: +page.svelte
src/scrape/: mangadex.rs  mod.rs
(+55 files in other folders)
