[package]
name = "subete"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "subete_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.0.0"
dirs = "5.0.1"
regex = "1.10.6"
aes = "0.7"
block-modes = "0.8"
base64 = "0.13"
quickjs_runtime = { version = "0.14.1", optional = true }
quickjs-rusty = { version="0.6.3", optional=true }
tauri-plugin-os = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2"

[features]
windows = ["quickjs-rusty"]
linux = ["quickjs_runtime"]
quickjs_runtime = ["dep:quickjs_runtime"]

[target.'cfg(any(unix, android))'.dependencies]
quickjs_runtime = "0.14.1"

[target.'cfg(windows)'.dependencies]
quickjs-rusty = "0.6.3"
